[workspace]
members = [
  "liburing-rs",
]
resolver = "2"

[workspace.package]
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
edition = "2021"
homepage = "https://github.com/SF-Zhou/ruring"
repository = "https://github.com/SF-Zhou/ruring"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
libc = "0"

[profile.release]
debug = true
