[package]
name = "ruring"
version = "0.1.2"
edition = "2021"
description = "High-performance network library based on io_uring."
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/SF-Zhou/ruring"
homepage = "https://github.com/SF-Zhou/ruring"
repository = "https://github.com/SF-Zhou/ruring"

[dependencies]
atomic = "0"
bytemuck = "1"
bytes = "1"
bitflags = "2"
libc = "0"

[profile.release]
debug = true
